Bug 1691286: Fix nsPrintSettingsWin::CopyFromNative to reliably encode the pages' orientation in the mOrientation field (fixing mismatched landscape/portrait rendering in some cases). r=jfkthame, a=pascalc

This was just a silly typo; I got the order of the ternary expression's options
backwards.

The mistake wasn't obvious from testing, because this function isn't always
invoked.  In particular, it's not invoked if I print "https://example.org" in a
fresh profile, but it *is* invoked if I print "about:support" or other
browser-internal pages.

Differential Revision: https://phabricator.services.mozilla.com/D104354